<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_lose"
        android:icon="@drawable/ic_bell"
        android:title="@string/title_lose" />
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_find"
        android:title="@string/title_find" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_community"
        android:title="@string/title_community" />
    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_mypage"
        android:title="@string/title_mypage" />


</menu>
